--- a/StackdVersion1/UI/Cell/TagsCell.xib
+++ b/StackdVersion1/UI/Cell/TagsCell.xib
@@ -20,12 +20,13 @@
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kXk-Us-HcQ">
                         <rect key="frame" x="15" y="1" width="225" height="126"/>
-                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </view>
-            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.96862745098039216" green="0.96862745098039216" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="kXk-Us-HcQ" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="8xl-5a-m2n"/>
                 <constraint firstAttribute="bottom" secondItem="kXk-Us-HcQ" secondAttribute="bottom" constant="1" id="KSq-mV-SZ2"/>
