--- a/StackdVersion1/Base.lproj/Main.storyboard
+++ b/StackdVersion1/Base.lproj/Main.storyboard
@@ -536,7 +536,7 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="T3B-iP-CZj" firstAttribute="top" secondItem="dhG-xa-30W" secondAttribute="top" constant="10" id="9x2-wb-n8n"/>
                             <constraint firstItem="T3B-iP-CZj" firstAttribute="leading" secondItem="dhG-xa-30W" secondAttribute="leading" id="EVA-pS-teF"/>
@@ -589,8 +589,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kxf-zC-X5T">
+                                <rect key="frame" x="0.0" y="64" width="375" height="6"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="6" id="mOO-T7-DpF"/>
+                                </constraints>
+                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xCZ-I9-mV1">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <rect key="frame" x="0.0" y="70" width="375" height="548"/>
                                 <color key="backgroundColor" red="0.94509803920000002" green="0.94509803920000002" blue="0.94509803920000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" shouldIndentWhileEditing="NO" reuseIdentifier="regularcell" rowHeight="120" id="7xz-F6-GjC" customClass="SharedTableViewCell" customModule="StackdVersion1" customModuleProvider="target">
@@ -621,8 +628,11 @@
                         <color key="backgroundColor" red="0.94509803920000002" green="0.94509803920000002" blue="0.94509803920000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="cKJ-9Z-UQi" firstAttribute="bottom" secondItem="xCZ-I9-mV1" secondAttribute="bottom" id="2kI-RL-WsW"/>
-                            <constraint firstItem="xCZ-I9-mV1" firstAttribute="top" secondItem="cKJ-9Z-UQi" secondAttribute="top" id="6sl-4N-Z48"/>
+                            <constraint firstItem="kxf-zC-X5T" firstAttribute="bottom" secondItem="xCZ-I9-mV1" secondAttribute="top" id="3TK-KT-7Ww"/>
+                            <constraint firstItem="kxf-zC-X5T" firstAttribute="top" secondItem="cKJ-9Z-UQi" secondAttribute="top" id="6Pd-hU-Okh"/>
                             <constraint firstItem="xCZ-I9-mV1" firstAttribute="leading" secondItem="cKJ-9Z-UQi" secondAttribute="leading" id="72v-UP-wv7"/>
+                            <constraint firstItem="kxf-zC-X5T" firstAttribute="leading" secondItem="Y7U-5I-Xng" secondAttribute="leading" id="D3y-ku-3RD"/>
+                            <constraint firstAttribute="trailing" secondItem="kxf-zC-X5T" secondAttribute="trailing" id="g6T-9f-S4q"/>
                             <constraint firstItem="cKJ-9Z-UQi" firstAttribute="trailing" secondItem="xCZ-I9-mV1" secondAttribute="trailing" id="zCf-xx-ULX"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="cKJ-9Z-UQi"/>
@@ -704,7 +714,7 @@
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="bky-gL-NcC" firstAttribute="leading" secondItem="egw-mK-EtD" secondAttribute="leading" constant="25" id="2cT-5x-vrK"/>
                             <constraint firstItem="PMy-iv-joR" firstAttribute="top" secondItem="Gz6-zz-pyc" secondAttribute="bottom" constant="55" id="CtN-Ck-VRf"/>
